--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 *{
 	padding: 0px;
 	margin: 0px;
+	margin-top: 20px;
 }
+
+@font-face{
+	font-family: woodcut;
+	src: url(fonts/WOODCUT.TTF);
+}
+
 a{
 	text-decoration: none;
 	color: #e94fff;
@@ -32,10 +39,10 @@ div#name{
 	margin: auto;
 	top: 0;
 	right: 0;
-	bottom: 0;
+	bottom: 50px;
 	left: 0;
-	width: 300px;
-	height:40px;
+	width: 350px;
+	height:90px;
 	color: #e94f6e;
 	font-size: 30px;
 	border-bottom: 0px solid #e94f6e;
@@ -67,7 +74,7 @@ div#cccf{
 	right: 0;
 	bottom: 0;
 	left: 0;
-	width: 310px;
+	width: 340px;
 	height:40px;
 	color: #e94f6e;
 	font-size: 30px;
@@ -98,4 +105,33 @@ div#links a:hover{
 	-moz-transition: all 0.4s ease;
 	-moz-border-radius: 100px;
 	border-radius: 100px;
+}
+div#photo{
+	position: absolute;
+	margin: auto;
+	top: -400px;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	width: 170px;
+	height:242px;
+	color: #e94f6e;
+	font-size: 30px;
+	border-bottom: 0px solid #e94f6e;
+	-webkit-transition: all 0.4s ease;
+}
+div#photo img{
+	border-bottom:0px solid #e94f6e;
+	-webkit-transition: all 0.4s ease;-moz-transition: all 0.4s ease;
+	-webkit-border-radius:100px;
+	height: 230px;
+	width: 170px;
+}
+div#photo img:hover{
+	border-bottom: 10px solid #e94f6e;
+	-webkit-border-radius:50px;
+	-webkit-transition: all 0.4s ease;-moz-transition: all 0.4s ease;
+}
+div#photo a:hover{
+	background-color: #252525;
 }
